# Glewy

./: .gitignore  Application.cpp  Application_0.cpp  BlobSpikeTable.uv  CMakeLists.txt  Depend.txt  Notes.txt  Overview.txt  README.md  ShaderNotes.txt  TODO.md  TestAssets.hpp  g++CUMake  g++MakeFile.bat  g++MakeFileOpt.bat
CUMake/: Content  Core  Glewy  GlewyOnly  PackDep  Rendering  Scene  Standard  Structures  Utilities
Notes/: ContentNotes.txt  Notes.txt
README/: Overview.txt  TODO.md
_deprecated/: MakeProj.bat
assets/Shaders/: color_shift.frag  convolution.frag  frag.glsl
depend/: CLONE_DEP_GIT.bat  CMakeLists.txt
include/Glewy/: glewy.hpp
include/Glewy/Audio/: audio.hpp  sound.hpp  soundinstance.hpp
include/Glewy/Content/: asset.hpp  content.hpp  data.hpp  file.hpp  serializable.hpp  stringserial.hpp  testcontent.hpp
include/Glewy/Core/: abstraction.hpp  awakeinfo.hpp  core.h  core.hpp  imodifiable.hpp  instance.hpp  iregisterable.hpp  logging.hpp  macros.hpp  root.hpp  typedef.hpp  updateinfo.hpp
include/Glewy/Debug/: debug.hpp  debugline.hpp  debugrenderable.hpp  debugrendercalls.hpp
include/Glewy/Input/: button.hpp  input.hpp  inputable.hpp  mouse.hpp
include/Glewy/Rendering/: animation.hpp  material.hpp  materialrenderable.hpp  renderable.hpp  renderablecache.hpp  rendercalls.hpp  renderer.hpp  rendering.h  rendering.hpp  shaders.hpp  texcoordtable.hpp  texture.hpp  uniform.hpp  uvtable.hpp
include/Glewy/Scene/: attachment.hpp  camera.hpp  component.hpp  entity.hpp  root.hpp  scene.h  scene.hpp  transformable.hpp
include/Glewy/Standard/: sprite.hpp  spriteatlas.hpp  standard.h  standard.hpp
include/Glewy/Standard/Collision/: AABB.hpp  collision.hpp
include/Glewy/Standard/Collisions/: AABB.hpp
include/Glewy/Standard/RayCollisions/: aabbraychecker.hpp  dynraybox.hpp  raychecker.hpp  raycollidable.hpp  rcaabb.hpp
include/Glewy/Standard/Shaders/: std_sprite_vert.glsl
include/Glewy/Standard/Shapes/: line.hpp
include/Glewy/Standard/Sprite/: sprite.hpp  spriteatlas.hpp
include/Glewy/Standard/Tilemap/: grid.hpp  tile.hpp  tilemap.hpp  tilemaprenderer.hpp
include/Glewy/Standard/UtilAttachments/: cameracontroller.hpp  transformcontroller.hpp
include/Glewy/Structures/: animation.hpp  cache.hpp  cellmap.hpp  dool.hpp  grid.hpp  mat.hpp  modulo.hpp  range.hpp  ray.hpp  rect.hpp  spatialmap.hpp  structures.h  structures.hpp  transform.hpp  tree.hpp  vec.hpp
include/Glewy/Utilities/: intersection.hpp  math.hpp  pairing.hpp  readfile.hpp  safepun.hpp  util.hpp  utilities.h  utilities.hpp
include/Glewy/_deprecated/: camera.hpp  entity.hpp  interfaces.hpp  inversetransform.hpp  rect.hpp  rendertarget.hpp  transform.hpp
include/Glewy/_deprecated/coll/: collider2d.hpp  dynboxcollider2d.hpp  ray.hpp  raycollider2d.hpp
include/SML/: mat.hpp  sml.hpp  vec.hpp
src/: CMakeLists.txt
src/Audio/: sound.cpp  soundinstance.cpp
src/Content/: data.cpp  file.cpp  serializable.cpp  stringserial.cpp  testcontent.cpp
src/Core/: abstraction.cpp  instance.cpp  root.cpp
src/Debug/: debugline.cpp  debugrendercalls.cpp
src/Input/: button.cpp  inputable.cpp  mouse.cpp
src/Rendering/: material.cpp  renderable.cpp  renderablecache.cpp  rendercalls.cpp  renderer.cpp  shaders.cpp  texcoordtable.cpp  texture.cpp  uniform.cpp  uvtable.cpp
src/Scene/: attachment.cpp  camera.cpp  component.cpp  entity.cpp  root.cpp  transformable.cpp
src/Standard/: sprite.cpp  spriteatlas.cpp
src/Standard/Collision/: AABB.cpp
src/Standard/RayCollisions/: aabbraychecker.cpp  aabbraycollider.cpp  dynraybox.cpp  raycollidable.cpp  raycollisiongroup.cpp
src/Standard/Shapes/: line.cpp
src/Standard/Sprite/: sprite.cpp  spriteatlas.cpp
src/Standard/Tilemap/: grid.cpp  tile.cpp  tilemap.cpp  tilemaprenderer.cpp
src/Standard/UtilAttachments/: cameracontroller.cpp  transformcontroller.cpp
src/Structures/: cellmap.cpp  dool.cpp  grid.cpp  rect.cpp  transform.cpp  tree.cpp  uvtable.cpp
src/Tests/: TestSuite.cpp
src/Utilities/: math.cpp  readfile.cpp  util.cpp
src/_deprecated/: camera.cpp  entity.cpp  inversetransform.cpp  rect.cpp  rendertarget.cpp  transform.cpp
src/_deprecated/coll/: collider2d.cpp  dynboxcollider2d.cpp  raycollider2d.cpp
